--- a/geonode/templates/publication/avalanches/index.html
+++ b/geonode/templates/publication/avalanches/index.html
@@ -55,7 +55,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Avalanches</h1>
-					<h2>A Documentation of the <strong><a href="http://asdc.immap.org" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of the <strong><a href="http://18.196.236.51" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -228,7 +228,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -286,7 +286,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -317,7 +317,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -352,7 +352,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -385,7 +385,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -419,7 +419,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -459,7 +459,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
@@ -495,7 +495,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/avalanches/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -505,7 +505,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -620,7 +620,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/avalanches/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -630,7 +630,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -737,7 +737,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/avalanches/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -747,7 +747,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -857,7 +857,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Avalanches</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Avalanches</a>
 					</div>
 				</div>
 			</div>
