--- a/geonode/templates/publication/flooding/Look5.html
+++ b/geonode/templates/publication/flooding/Look5.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <a href="https://asdc.immap.org">Afghanistan Spatial Data Center</a></h2>
+					<h2>A Documentation of <a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -209,7 +209,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -289,7 +289,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -324,7 +324,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -371,7 +371,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -405,7 +405,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -445,7 +445,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -481,7 +481,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -490,7 +490,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -603,7 +603,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -612,7 +612,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -725,7 +725,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -734,7 +734,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -850,7 +850,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
