--- a/geonode/templates/publication/flooding/Look6.html
+++ b/geonode/templates/publication/flooding/Look6.html
@@ -46,7 +46,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <strong><a href="https://asdc.immap.org">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of <strong><a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -217,7 +217,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -297,7 +297,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -332,7 +332,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -379,7 +379,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -413,7 +413,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -453,7 +453,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -489,7 +489,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -499,7 +499,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -606,7 +606,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -616,7 +616,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -732,7 +732,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div style="max-height: 260px;">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -742,7 +742,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -852,7 +852,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
