--- a/geonode/templates/publication/flooding/Look8.html
+++ b/geonode/templates/publication/flooding/Look8.html
@@ -58,7 +58,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of the <strong><a href="http://asdc.immap.org" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of the <strong><a href="http://18.196.236.51" target="_blank">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -229,7 +229,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -317,7 +317,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -352,7 +352,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -399,7 +399,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -433,7 +433,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -473,7 +473,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
@@ -509,7 +509,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -519,7 +519,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -626,7 +626,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -636,7 +636,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -752,7 +752,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="{{ STATIC_URL }}publication/flooding/img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -762,7 +762,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="http://asdc.immap.org" target="_blank">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="http://18.196.236.51" target="_blank">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -872,7 +872,7 @@
 						<h3 class="subscribe-title">Explore the ASDC tools</h3>
 					</div>
 					<div class="col-lg-5 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="http://asdc.immap.org" target="_blank">More on Afghanistan Floods</a>
+						<a class="subscribe-btn" href="http://18.196.236.51" target="_blank">More on Afghanistan Floods</a>
 					</div>
 				</div>
 			</div>
