--- a/geonode/templates/training.html
+++ b/geonode/templates/training.html
@@ -36,7 +36,7 @@
 
 <div class="col-md-12">
 	<p class="lead">{% trans "Video Training" %}</p>
-	<p>{% trans "To facility better communication a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Spatial Data Center (asdc.immap.org).  The instruction videos can be found on YouTube and on the ASDC. (available in Dari and English). There are already 11 training videos, totalling 1 ½ hours of material." %}</p>
+	<p>{% trans "To facility better communication a Youtube channel has been made to host basic instruction videos on the functionalities of the Afghanistan Spatial Data Center (18.196.236.51).  The instruction videos can be found on YouTube and on the ASDC. (available in Dari and English). There are already 11 training videos, totalling 1 ½ hours of material." %}</p>
 	<p><a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg">{% trans "Click here go to youtube page" %}</a></p>
 	<img src="{{ STATIC_URL }}lib/foto/training2.png" alt="">
 
