--- a/dashboard/templates/v2/dash_aforecast.html
+++ b/dashboard/templates/v2/dash_aforecast.html
@@ -24,7 +24,7 @@
 	                                <a class="close-link"><i class="fa fa-close"></i></a>
 	                            </li>
 	                            <li>
-	                                <a href="http://asdc.immap.org/maps/707/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
+	                                <a href="http://18.196.236.51/maps/707/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
 	                            </li>
 	                        </ul>
 	                        <div class="clearfix"></div>
