--- a/dashboard/templates/v2/dash_baseline.html
+++ b/dashboard/templates/v2/dash_baseline.html
@@ -57,7 +57,7 @@
                                     <a class="close-link"><i class="fa fa-close"></i></a>
                                 </li>
                                 <li>
-                                    <a href="http://asdc.immap.org/maps/702/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
+                                    <a href="http://18.196.236.51/maps/702/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
                                 </li>
                             </ul>
                             <div class="clearfix"></div>
