--- a/dashboard/templates/v2/dash_drought.html
+++ b/dashboard/templates/v2/dash_drought.html
@@ -41,7 +41,7 @@
 	                                <a class="close-link"><i class="fa fa-close"></i></a>
 	                            </li>
 	                            <li class="hidden">
-	                                <a href="http://asdc.immap.org/maps/5632/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
+	                                <a href="http://18.196.236.51/maps/5632/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
 	                            </li>
 	                        </ul>
 	                        <div class="clearfix"></div>
