--- a/geonode/layers/templates/v2/info.html
+++ b/geonode/layers/templates/v2/info.html
@@ -435,7 +435,7 @@
 					<div class="product-details-side" style="background-color: #fff; padding: 0 10px;">
 						<div class="product-legend">
 							<h4>Legend</h4>
-							<img src="http://asdc.immap.org/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
+							<img src="http://18.196.236.51/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
 						</div>
 						<div class="product-style">
 							<h4>Style</h4>
@@ -443,27 +443,27 @@
 							<ul class="list-unstyled">
 						        <li>
 						          	<input type="radio" name="style" id="afg_hltfac_tier3" value="">
-						          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
+						          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
 						        </li>
 						        <li>
 						          	<input type="radio" name="style" id="afg_hltfac_0d5a9a45" value="">
-						          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
+						          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
 						        </li>
 						        <li>
 						          	<input type="radio" name="style" id="afg_hltfac_tier3_bhc" value="">
-						          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
+						          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
 						        </li>
 						        <li>
 						          	<input type="radio" name="style" id="afg_hltfac_efb04a60" value="">
-						          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
+						          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
 						        </li>
 						        <li>
 						          	<input type="radio" checked="" name="style" id="afg_hltfac_hospitals" value="">(default style)
-						          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
+						          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
 						        </li>
 						        <li>
 						          <input type="radio" name="style" id="afg_hltfac_t2" value="">
-						          <a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
+						          <a href="http://18.196.236.51/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
 						        </li>
 						    </ul>
 						</div>
@@ -490,34 +490,34 @@
 								</ul>
 								<div class="tab-content" style="height: 250px; padding: 10px 0;">
 								  	<div id="legend" class="tab-pane fade in active">
-								    	<img src="http://asdc.immap.org/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
+								    	<img src="http://18.196.236.51/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
 								  	</div>
 									<div id="style" class="tab-pane fade">
 										<p>The following styles are associated with this layer. Choose a style to view it in the preview map.</p>
 										<ul class="list-unstyled">
 									        <li>
 									          	<input type="radio" name="style" id="afg_hltfac_tier3" value="">
-									          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
+									          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
 									        </li>
 									        <li>
 									          	<input type="radio" name="style" id="afg_hltfac_0d5a9a45" value="">
-									          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
+									          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
 									        </li>
 									        <li>
 									          	<input type="radio" name="style" id="afg_hltfac_tier3_bhc" value="">
-									          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
+									          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
 									        </li>
 									        <li>
 									          	<input type="radio" name="style" id="afg_hltfac_efb04a60" value="">
-									          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
+									          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
 									        </li>
 									        <li>
 									          	<input type="radio" checked="" name="style" id="afg_hltfac_hospitals" value="">(default style)
-									          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
+									          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
 									        </li>
 									        <li>
 									          <input type="radio" name="style" id="afg_hltfac_t2" value="">
-									          <a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
+									          <a href="http://18.196.236.51/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
 									        </li>
 									    </ul>
 									</div>
@@ -957,7 +957,7 @@
 						<div class="product-details-side" style="background-color: #fff; padding: 0 10px;">
 							<div class="product-legend">
 								<h4>Legend</h4>
-								<img src="http://asdc.immap.org/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
+								<img src="http://18.196.236.51/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
 							</div>
 							<div class="product-style">
 								<h4>Style</h4>
@@ -965,27 +965,27 @@
 								<ul class="list-unstyled">
 							        <li>
 							          	<input type="radio" name="style" id="afg_hltfac_tier3" value="">
-							          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
+							          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
 							        </li>
 							        <li>
 							          	<input type="radio" name="style" id="afg_hltfac_0d5a9a45" value="">
-							          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
+							          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
 							        </li>
 							        <li>
 							          	<input type="radio" name="style" id="afg_hltfac_tier3_bhc" value="">
-							          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
+							          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
 							        </li>
 							        <li>
 							          	<input type="radio" name="style" id="afg_hltfac_efb04a60" value="">
-							          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
+							          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
 							        </li>
 							        <li>
 							          	<input type="radio" checked="" name="style" id="afg_hltfac_hospitals" value="">(default style)
-							          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
+							          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
 							        </li>
 							        <li>
 							          <input type="radio" name="style" id="afg_hltfac_t2" value="">
-							          <a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
+							          <a href="http://18.196.236.51/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
 							        </li>
 							    </ul>
 							</div>
@@ -1012,34 +1012,34 @@
 										</ul>
 										<div class="tab-content" style="height: 250px; padding: 10px 15px; background-color: #fff; overflow-y: auto; border-top: 4px solid #a72b1f;">
 										  	<div id="legend" class="tab-pane fade in active">
-										    	<img src="http://asdc.immap.org/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
+										    	<img src="http://18.196.236.51/geoserver/wms?request=GetLegendGraphic&format=image/png&WIDTH=20&HEIGHT=20&LAYER=geonode:afg_hltfac&legend_options=fontAntiAliasing:true;fontSize:12;forceLabels:on">
 										  	</div>
 											<div id="style" class="tab-pane fade">
 												<p>The following styles are associated with this layer. Choose a style to view it in the preview map.</p>
 												<ul class="list-unstyled">
 											        <li>
 											          	<input type="radio" name="style" id="afg_hltfac_tier3" value="">
-											          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
+											          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3.sld">Hospitals Others</a>
 											        </li>
 											        <li>
 											          	<input type="radio" name="style" id="afg_hltfac_0d5a9a45" value="">
-											          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
+											          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_0d5a9a45.sld">Hospitals Tier 2</a>
 											        </li>
 											        <li>
 											          	<input type="radio" name="style" id="afg_hltfac_tier3_bhc" value="">
-											          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
+											          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_tier3_bhc.sld">Hospitals Tier 3</a>
 											        </li>
 											        <li>
 											          	<input type="radio" name="style" id="afg_hltfac_efb04a60" value="">
-											          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
+											          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_efb04a60.sld">Hospitals Default</a>
 											        </li>
 											        <li>
 											          	<input type="radio" checked="" name="style" id="afg_hltfac_hospitals" value="">(default style)
-											          	<a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
+											          	<a href="http://18.196.236.51/geoserver/styles/afg_hltfac_hospitals.sld">Hospitals Tier 1</a>
 											        </li>
 											        <li>
 											          <input type="radio" name="style" id="afg_hltfac_t2" value="">
-											          <a href="http://asdc.immap.org/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
+											          <a href="http://18.196.236.51/geoserver/styles/afg_hltfac_t2.sld">Hospitals CHC-MCH-BHC-SBHC</a>
 											        </li>
 											    </ul>
 											</div>
