--- a/geonode/templates/publication/flooding/Look2.html
+++ b/geonode/templates/publication/flooding/Look2.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <a href="https://asdc.immap.org">Afghanistan Spatial Data Center</a></h2>
+					<h2>A Documentation of <a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></h2>
 				</div>
 				<!-- Navbar -->
 				<nav id="nav_head" class="navbar navbar-expand-lg navbar-dark py-0 smooth_scroll" style="height: 72px;">
@@ -214,7 +214,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -294,7 +294,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -329,7 +329,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -376,7 +376,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -410,7 +410,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -450,7 +450,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -486,7 +486,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -495,7 +495,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -608,7 +608,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -617,7 +617,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -730,7 +730,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -739,7 +739,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -855,7 +855,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
