--- a/geonode/templates/publication/flooding/Look4.html
+++ b/geonode/templates/publication/flooding/Look4.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <a href="https://asdc.immap.org">Afghanistan Spatial Data Center</a></h2>
+					<h2>A Documentation of <a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></h2>
 				</div>
 				<!-- Navbar -->
 				<nav id="nav_head" class="navbar navbar-expand-lg navbar-dark py-0 smooth_scroll" style="height: 72px;">
@@ -208,7 +208,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -288,7 +288,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -323,7 +323,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -370,7 +370,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -404,7 +404,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -444,7 +444,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
@@ -480,7 +480,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -489,7 +489,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -602,7 +602,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -611,7 +611,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -724,7 +724,7 @@
 						<div class="col-lg-4">
 							<div class="">
 								<div class="media d-block pb-md-3">
-									<section class="facade-minimal" data-url="http://asdc.immap.org"> 
+									<section class="facade-minimal" data-url="http://18.196.236.51"> 
 									    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 									</section>
 									<div class="media-body">
@@ -733,7 +733,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -849,7 +849,7 @@
 					<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 				</div>
 				<div class="col-lg-4 text-lg-right subscribe-btn-container">
-					<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+					<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 				</div>
 			</div>
 		</div>
