--- a/geonode/templates/publication/flooding/Look9.html
+++ b/geonode/templates/publication/flooding/Look9.html
@@ -46,7 +46,7 @@
 			<div class="d-flex flex-column text-center">
 				<div class="pt-5 py-4" style="background-color: rgba(0, 0, 0, 0.8);">
 					<h1 class="text-uppercase">Afghanistan Flooding</h1>
-					<h2>A Documentation of <strong><a href="https://asdc.immap.org">Afghanistan Spatial Data Center</a></strong></h2>
+					<h2>A Documentation of <strong><a href="https://18.196.236.51">Afghanistan Spatial Data Center</a></strong></h2>
 				</div>
 				<div class="scrolldown smooth_scroll">
 		            <a id="scroll" href="#section_home" class="scroll"></a>
@@ -218,7 +218,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -293,7 +293,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -328,7 +328,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -375,7 +375,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -411,7 +411,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -451,7 +451,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
@@ -487,7 +487,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -497,7 +497,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -604,7 +604,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height" style="">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -614,7 +614,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -730,7 +730,7 @@
 							<div class="col-lg-4">
 								<div class="media d-block pb-md-3">
 									<div class="d-flex align-items-end fix_height">
-										<section class="facade-minimal m-0" data-url="http://asdc.immap.org"> 
+										<section class="facade-minimal m-0" data-url="http://18.196.236.51"> 
 										    <img src="img/scen_asdc_01_home.png" class="img-fluid">
 										</section>
 									</div>
@@ -740,7 +740,7 @@
 												<span class="fa-3x">1</span>
 											</div>
 											<div class="">
-												<p class="d-inline">Open your browser and go to <strong><a href="https://asdc.immap.org">asdc.immap.org</a></strong></p>
+												<p class="d-inline">Open your browser and go to <strong><a href="https://18.196.236.51">18.196.236.51</a></strong></p>
 											</div>
 											
 										</div>
@@ -850,7 +850,7 @@
 						<h3 class="subscribe-title">Let's go and explore our tools!</h3>
 					</div>
 					<div class="col-lg-4 text-lg-right subscribe-btn-container">
-						<a class="subscribe-btn" href="https://asdc.immap.org">Go To ASDC</a>
+						<a class="subscribe-btn" href="https://18.196.236.51">Go To ASDC</a>
 					</div>
 				</div>
 			</div>
